<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">49er Sense</string>
    <string name="start">Manage Community</string>
    <string name="welcome">49er Sense v.1.0</string>
    <string name="subwelcome">Real-Time and Mobile Tutoring Solution</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="reset_button">   Reset   </string>
    <string name="login_button">   Login    </string>
    <string name="register_button">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="exit_button">Exit</string>
    <string name="noInternet">No Internet Connection</string>
    <string name="HomeActivity">Home</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="password_verify_label">Verify Password</string>
    <string name="password_verify_hint">Password</string>
    <string name="email_label">Email</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone No:</string>
    <string name="email_hint">Email</string>
    <string name="firstName_hint">Enter First Name</string>
    <string name="phone_hint">Enter Phone Number</string>
    <string name="lastName_hint">Enter Last Name</string>
    <string name="gender_label">Gender</string>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="accept_agreement_label">Accept Agreement</string>
    <string name="register_button_label">Register</string>
    <string name="reset_button_label">Reset</string>
    <string name="back_button_label">Back</string>

    <!-- Error Messages -->
    <string name="success_message">Verification was Successful!</string>
    <string name="username_error_message">Username Not Provided!</string>
    <string name="password_error_message">Password Not Provided!</string>
    <string name="minimum_length_error">Please Enter More Than 5 Characters!</string>
    <string name="passwordmatch_error_message">Passwords Do Not Match!</string>
    <string name="fName_error_message">First Name Not Provided!</string>
    <string name="lName_error_message">Last Name Not Provided!</string>
    <string name="email_error_message">Email Not Provided!</string>
    <string name="emailpattern_error_message">Email Format Invalid!</string>
    <string name="phone_error_message">Phone Number Not Provided!</string>
    <string name="agreement_error_message">You Must Accept the Agreement!</string>
    <string name="title_activity_user_home_nav_drawer">UserHomeNavDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_user_home_nav">49erSense</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="strSecurity">Security System</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strArmedAway">Armed Away</string>
    <string name="strDisarmed">Disarmed</string>

    <string name="strLights">Lights</string>
    <string name="strLightsAll">All</string>
    <string name="strLightsLivingRoom">Living Room</string>
    <string name="strLightsKitchen">Kitchen</string>
    <string name="strLightsBasement">Basement</string>

    <string name="strLocksLock">Lock</string>
    <string name="strLocksLocked">Locked</string>
    <string name="strLocksUnLocked">Unlocked</string>
    <string name="strLocksGarageLock">Garage Door Lock</string>
    <string name="strLocksFrontLock">Front Door Lock</string>
    <string name="strLocksBackLock">Back Door Lock</string>

    <string name="strThermostat">Thermostat</string>
    <string name="strThermostatCurrent">Current Temperature:   </string>
    <string name="strThermostatTarget">Target Temperature</string>
    <string name="strThermostatModeCool">Cool</string>
    <string name="strThermostatDegree">_o C</string>
    <string name="strThermostatSet">Set Temperature</string>
    <string name="strThermostatCurrentVal">70</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string-array name="strExpListParent">
        <item>Security System</item>
        <item>Locks</item>
        <item>Garage Doors</item>
        <item>Lights</item>
        <item>Thermostat</item>
    </string-array>

    <string-array name="strExpListChild">
        <item>Armed Away</item>
        <item>On</item>
        <item>Closed</item>
        <item>On</item>
        <item>65 Degrees</item>
    </string-array>
    <string name="open_weather_maps_app_id">c9f1520b4228122c1b5feb397397f1cd</string>>
    <string name="ArmedAway">Arm (Away)</string>>
    <string name="ArmedStay">Arm (Stay)</string>>
    <string name="Disarmed">Disarm</string>>
    <string name="Engaged">Engaged</string>>
    <string name="Disengaged">Disengaged</string>>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>


</resources>
