<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18dp" />


    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/username_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:hint="@string/password_hint" >
    </EditText>



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp" >

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="  Reset  " />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="40dp"
            android:layout_height="38dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:text="@string/login_button" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/register_button" />
    <Button
        android:id="@+id/buttonForgotPassword"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/exit_button" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextIPAddress"
        android:layout_gravity="center_horizontal" />

</LinearLayout>