<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sumant.iot.fortyninersense.FragLights"
    android:tag="fr_locks">

    <!-- TODO: Update blank fragment layout -->

    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:columnCount="5"
        android:rowCount="10"
        android:id="@+id/gridLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/strLocksLocked"
            android:id="@+id/textViewGarageDoor"
            android:layout_row="1"
            android:layout_column="1" />

        <CheckBox
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxGarageDoor"
            android:layout_row="0"
            android:layout_column="0"
            android:checked="false" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/strLocksGarageLock"
            android:id="@+id/textViewAll"
            android:layout_gravity="center|left"
            android:layout_row="0"
            android:layout_column="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxFrontDoor"
            android:layout_row="2"
            android:layout_column="0"
            android:checked="false" />

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/strLocksFrontLock"
            android:id="@+id/textViewLivingRoom"
            android:layout_gravity="center|left"
            android:layout_row="2"
            android:layout_column="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewFrontDoors"
            android:src="@drawable/ic_keylocked_s"
            android:layout_row="2"
            android:layout_gravity="center"
            android:layout_column="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/strLocksLocked"
            android:id="@+id/textViewFrontDoor"
            android:layout_row="3"
            android:layout_column="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxBackDoor"
            android:layout_row="6"
            android:layout_column="0"
            android:checked="false" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewGarageDoor"
            android:src="@drawable/ic_keylocked_s"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_gravity="center"
            android:maxHeight="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/strLocksBackLock"
            android:id="@+id/textViewKitchen"

            android:layout_gravity="center|left"
            android:layout_row="6"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/strLocksLocked"
            android:id="@+id/textViewBackDoor"
            android:layout_row="7"
            android:layout_column="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewBackDoor"
            android:src="@drawable/ic_keylocked_s"
            android:layout_row="6"
            android:layout_gravity="center"
            android:layout_column="3" />

    </GridLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/imageButtonLock"
            android:src="@drawable/ic_keylocked"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonUnlock"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_keyunlocked"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</RelativeLayout>
